2008-05-29  Jim Ingham  <jingham@apple.com>

	* macosx-nat-inferior.c (macosx_child_create_inferior): New 
	version for ARM.
	(macosx_child_attach): Allow suppression of the "Attach" message.
	
2008-05-12  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-dyld-process.c (mark_buckets_as_used): Fix boundary
	test thinko in warning message.

2008-05-09  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-dyld.c (macosx_dyld_init): Look for remote dyld at 
	0x8fc00000 to account for PPC programs running in translation.

2008-05-09  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-dyld-process.c (struct bfd_memory_footprint): Record
	a pointer to the bfd's filename.
	(mark_buckets_as_used): Detect attempts to write past the end of
	the memory map; issue a warning about which bfd caused it and 
	skip marking those buckets.

2008-05-02  Jim Ingham  <jingham@apple.com>

	* i386-macosx-nat-exec.c (fetch_inferior_registers): Use
	GDB_x86_THREAD_STATE32 rather than GDB_i386_THREAD_STATE32.
	(store_inferior_registers): Ditto.
	
2008-04-28  Jim Ingham  <jingham@apple.com>

	* machoread.c (macho_symfile_read): If the binary is encrypted, 
	then skip the on disk version.  It will just confuse us.
	* macosx-nat-dyld-process.c (dyld_load_library): Read encrypted
	binaries from memory.
	
2008-04-25  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat.c (can_attach): Don't issue warning if this is a native
	gdb and the target pid is a translated process.
	(is_pid_classic): Make externally visible.
	* macosx-nat.h: Add prototype for is_pid_classic.
	* macosx-nat-inferior.c (macosx_child_attach): Check explicitly for
	an i386 gdb attaching to a translated process; issue the warning here.

2008-04-25  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-dyld.c (malloc_inited_callback): Add 
	malloc_inited_callback_alt to record an alternate mangling scheme
	for this symbol.
	(macosx_set_start_breakpoint): Check for both versions.

2008-04-24  Jim Ingham  <jingham@apple.com>
